# CaLLi

./: LICENSE  README.md  array.bc  calli.opam  simple_1.bc
codes/: array.bc  array_alias_1.bc
example/: README.md  absAddr.ml  absIntSet.ml  absInterval.ml  absMemory2.ml  absValue.ml  absValue2.ml  analyzer.ml  dune  example.ml  init.ml  stackShape.ml  string_addr.ml  tF.ml  tF2.ml
example/test/: test.c
example2/: absMemory.ml  analyzer.ml  dune  tF.ml
example2/test/: test.bc  test.c  test.ll
monitor/: index.html  package-lock.json  package.json  vite.config.ts
monitor/src/: ICFGViewer.tsx  index.css  main.tsx
src/: dune
src/analyzer/: .states.ml  abstractDomain.ml  abstractMemory.ml  abstractSemantics.ml  callGraph.ml  callSiteContext.ml  context.ml  env.ml  icfg.ml  init.ml  llvmAnalyzer.ml  llvmAnalyzer2.ml  llvmWebAnalyzer.ml  states.ml  val.ml  worklist.ml
src/ir/: basicblock.ml  bbpool.ml  cfg.ml  cond.ml  expr.ml  function.ml  global.ml  inst.ml  metadata.ml  module.ml  op.ml  stmt.ml  term.ml  type.ml
src/monitor/: frontend_launcher.ml  frontend_static.ml  monitor_server.ml  monitor_web.ml
src/transform/: .transform.ml.swp  transform.ml  transform2.ml  transform3.ml  transform4.ml  transform_meta.ml  transform_select.ml  transform_stmt2bb.ml
src/util/: dot.ml  pp.ml  to_dot.ml  util.ml
