opam-version: "2.0"
synopsis: "CaLLi : OCaml Library for Static Analysis of LLVM bitcode"
maintainer: ["Soyeon Baek <sy.baek28@gmail.com>"]
authors: ["Soyeon Baek <sy.baek28@gmail.com>"]
homepage: "https://github.com/cnu-ants/CaLLi"
bug-reports: "https://github.com/cnu-ants/CaLLi/issues"
dev-repo: "git+https://github.com/cnu-ants/CaLLi.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.13"}
  "dune" {>= "2.9"}
  "llvm" 
  "zarith"
  "containers"
]
